@@ -6,11 +6,7 @@ public class MoodManager {
     private static final double BASELINE = 0.0;
 
     public enum Tier {
-        FURIOUS,
-        ANNOYED,
-        NEUTRAL,
-        CONTENT,
-        HAPPY
+        FURIOUS, ANNOYED, NEUTRAL, CONTENT, HAPPY
     }
 
     private double mood = BASELINE;
@@ -19,19 +15,20 @@ public class MoodManager {
         double m = getMood();
         if (m <= -60) return Tier.FURIOUS;
         if (m <= -20) return Tier.ANNOYED;
-        if (m < 20)   return Tier.NEUTRAL;
-        if (m < 60)   return Tier.CONTENT;
+        if (m < 20) return Tier.NEUTRAL;
+        if (m < 60) return Tier.CONTENT;
         return Tier.HAPPY;
     }
 
     public synchronized void adjust(double delta) {
-        mood = Math.max(MIN, Math.min(MAX, mood + delta));
+        mood = Math.clamp(mood + delta, MIN, MAX);
     }
 
 
     public double getMood() {
         return mood;
     }
+
     public void setMood(double mood) {
         this.mood = mood;
     }
